# GophKeeper

./: CONTRIBUTING.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backlog_task.yaml  bug_report.yaml
.github/PULL_REQUEST_TEMPLATE/: FEATURE.md  HOTFIX.md
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/db/migrations/: 20260609120000_create_secrets.sql  20260614120000_create_devices.sql
backend/src/gophkeeper/: main.py
backend/src/gophkeeper/api/: app.py  deps.py  errors.py
backend/src/gophkeeper/api/routers/: secrets.py
backend/src/gophkeeper/api/schemas/: secrets.py
backend/src/gophkeeper/domain/: device.py  errors.py  secret.py  unit_of_work.py
backend/src/gophkeeper/infrastructure/: unit_of_work.py
backend/src/gophkeeper/infrastructure/adapters/: database.py
backend/src/gophkeeper/infrastructure/repositories/: __init__.py  device_repository.py  secret_repository.py
backend/src/gophkeeper/services/: device_service.py  secret_service.py
backend/src/gophkeeper/settings/: settings.dev.toml  settings.py  settings.toml
backend/tests/integration/: conftest.py  test_device_repository.py  test_secret_repository.py
backend/tests/unit/: test_secret.py
cli/: .dockerignore  Dockerfile  Makefile  go.mod  main.go
cli/internal/commands/: root.go
cli/internal/config/: doc.go
cli/internal/crypto/: doc.go
cli/internal/domain/: secret.go
cli/internal/remote/: doc.go
docs/: user_stories.md
frontend/: package.json
frontend/src/: App.jsx  index.css
(+7 files in other folders)
